- Removed cmsUserName and repositoryName when opening preview window.
- Added new contentVersion tag for the cms workflows.
- Made it possible to assign a return address on the createDigitalAsset action so the save button can lead to a different view.
- Fixed bug in getMatchingContents which did not use the user db connection but started a new one.
- Added check so it a user sends in null or a id less than 1 it returns null allways. Saves a lot of errors in the logfiles.
- Fixed bug with overriding references when deleting a sitenode. The old code did not correctly delete the binding and it resulted in an error.
- Fixed issue with active users were counted wrong.
- Added method to get when latest publications were made.
- Changed the httphelper to not skip linebreak chars. 
- Fixed so one now can use non-ascii chars as digitalAssetKey. Two new encodings in app settings allow one to convert depending on server settings. Default settings usually works.
- Made the repositories be sorted by name in most views
- Improved performance and fault tolerance in repository export/import.
- Fixed issue with the Image-editor when using non-ascii user names.
- Fixed so displayName is shown in publishing lists and history instead of userName.
- Fixed nullpointer which occurred when an login failed in extranet.
- Fixed so validation errors gets focus when saving a content version.
- Fixed bug which made edit-on-sight fall back to normal edit view if a validation error occurred.
- Added possibility to have different icons in the content-tree for each content types. Rudimentary at the moment - you have to add an image file with the contentTypeDefinitionId in the infoglueCMS\script\xloadtree\images\xp\-folder.
- Fixed so the text searches with matchingContents etc on SQLServer works. Was a problem with how SQL-server escapes [-tags.
- Made a new webservice method which lets you get a contentVersion for a content remotely.