@@ -244,8 +244,13 @@
 	        <rtexprvalue>false</rtexprvalue>
     	</attribute>
         <attribute>
+            <name>contentVersionId</name>
+            <required>false</required>
+            <rtexprvalue>false</rtexprvalue>
+        </attribute>
+        <attribute>
             <name>content</name>
-            <required>true</required>
+            <required>false</required>
             <rtexprvalue>false</rtexprvalue>
         </attribute>
         <attribute>
